[gd_scene load_steps=7 format=3 uid="uid://vkd4ofrjc7o"]

[ext_resource type="Script" uid="uid://0blrnwy5d3mj" path="res://node.gd" id="1_sy5k4"]
[ext_resource type="Script" uid="uid://07k4agyxrdys" path="res://drag_container.gd" id="2_j2q8x"]
[ext_resource type="Script" uid="uid://jy43b70j4idf" path="res://matrix_edit.gd" id="3_112p8"]
[ext_resource type="Script" uid="uid://bxss5a6vy6401" path="res://graph.gd" id="4_e2u21"]

[sub_resource type="Gradient" id="Gradient_j2q8x"]
offsets = PackedFloat32Array(0.56, 0.7071)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_112p8"]
gradient = SubResource("Gradient_j2q8x")
width = 12
height = 12
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Node" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sy5k4")

[node name="DragContainer" type="Container" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 86.0
offset_right = 205.0
offset_bottom = 98.0
mouse_filter = 0
script = ExtResource("2_j2q8x")

[node name="Icon" type="TextureRect" parent="DragContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_112p8")

[node name="DragContainer2" type="Container" parent="."]
layout_mode = 0
offset_left = 442.0
offset_top = 163.0
offset_right = 454.0
offset_bottom = 175.0
mouse_filter = 0
script = ExtResource("2_j2q8x")

[node name="Icon" type="TextureRect" parent="DragContainer2"]
layout_mode = 2
texture = SubResource("GradientTexture2D_112p8")

[node name="DragContainer3" type="Container" parent="."]
layout_mode = 0
offset_left = 139.0
offset_top = 260.0
offset_right = 151.0
offset_bottom = 272.0
mouse_filter = 0
script = ExtResource("2_j2q8x")

[node name="Icon" type="TextureRect" parent="DragContainer3"]
layout_mode = 2
texture = SubResource("GradientTexture2D_112p8")

[node name="DragContainer4" type="Container" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 185.0
offset_right = 183.0
offset_bottom = 197.0
mouse_filter = 0
script = ExtResource("2_j2q8x")

[node name="Icon" type="TextureRect" parent="DragContainer4"]
layout_mode = 2
texture = SubResource("GradientTexture2D_112p8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Graph0" type="Control" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("4_e2u21")

[node name="Graph1" type="Control" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("4_e2u21")

[node name="Graph2" type="Control" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("4_e2u21")

[node name="Graph3" type="Control" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("4_e2u21")

[node name="MatrixEdit" type="GridContainer" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4
script = ExtResource("3_112p8")

[node name="OptionButton" type="OptionButton" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
selected = 0
item_count = 4
popup/item_0/text = "Bezier"
popup/item_0/id = 0
popup/item_1/text = "Hermite"
popup/item_1/id = 1
popup/item_2/text = "Catmull-rom"
popup/item_2/id = 2
popup/item_3/text = "B-spline"
popup/item_3/id = 3

[connection signal="matrix_changed" from="PanelContainer/HBoxContainer/MatrixEdit" to="." method="_on_matrix_edit_matrix_changed"]
